syntax = "proto3";

option go_package = "github.com/iotaledger/goshimmer/packages/network/warpsync/proto";

package warpsyncproto;

message Packet {
  oneof body {
    EpochBlocksStart epochBlocksStart = 1;
    EpochBlocksBatch epochBlocksBatch = 2;
    EpochBlocksEnd epochBlocksEnd = 3;
    EpochBlocksRequest epochBlocksRequest = 4;
    EpochCommitment epochCommitment = 5;
    EpochCommitmentRequest epochCommitmentRequest = 6;
    Negotiation negotiation = 7;
  }
}

message EpochBlocksStart {
  int64 EI = 1;
  bytes EC = 2;
  int64 blocksCount = 3;
}

message EpochBlocksBatch {
  int64 EI = 1;
  bytes EC = 2;
  repeated bytes blocks = 3;
}

message EpochBlocksEnd {
  int64 EI = 1;
  bytes EC = 2;
  bytes stateMutationRoot = 3;
  bytes stateRoot = 4;
  bytes manaRoot = 5;
}

message EpochBlocksRequest {
  int64 EI = 1;
  bytes EC = 2;
}

message EpochCommitment {
  bytes Bytes = 1;
}

message EpochCommitmentRequest {
  bytes Bytes = 1;
}

message Negotiation {}